  in JVMs without JavaFX support.
  
- IceGrid node now initializes the process supplementary groups.

- Added man pages for Ice executable tools and commands.

- Added ability to list IceStorm topic subscribers.

- Fixed a bug in the graphical IceGrid administrative tool that cause
  the "Save" and "Save to File" commands to produce an empty file 
  without report any errors.
  

C++ Changes
===========

- Reading an optional with the Ice::InputStream::read method should
  now clear the optional if the optional isn't marshaled on the input
  stream.

- Fixed file descriptor leak that would occur if an object adapter
  listened on a UDP endpoint (one descriptor leaked per UDP endpoint).

- Fixed a bug that could cause an unexpected exception to be thrown on
  plugin loading when a plugin property specified both a path and
  version.

- Fixed a bug in slice2cpp that generated invalid C++ code for C++11
  asynchronous invocations.
  
- Fixed a bug in slice2cpp that generated invalid C++ code when using
  "cpp:virtual" metadata.
  
- Fixed a bug in slice2cpp that generate invalid C++ code when a method
  has more that 10 output parameters.


Java Changes
============

- Fixed an SSL issue with anonymous ciphers on SLES 11 SP3 when using
  the IBM JDK.

- To simplify the use of optional values with the stream API, an
  optionalFormat() method is now generated in Helper classes when
  the --stream option is enabled.

- Fixed an assertion that would occur if a memory limit exception was
  raised while marshaling the response of an AMD callback.


C# Changes
==========

- To simplify the use of optional values with the stream API, an
  optionalFormat() method is now generated in Helper classes when
  the --stream option is enabled.

- Fixed an assertion that would occur if a memory limit exception was
  raised while marshaling the response of an AMD callback.

- Fixed a bug in slice2cs that caused incorrect code to be generated